--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 /******************************************************************
-Resume Web page
+Online Resume 
 A Lightweight One page online Resume
 
 _______________________________________________________________
 
 _______________________________________________________________
 
-Webpage Resume is designed to make to make an online resume easier.It's built
+This is a framewokr or starter for an online resume is designed to make to make an online resume easier.It's built
 using HTML5 and javascript. I'm always open to contribution. :)
 
 Designed by Nancy Crandall
