--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 /******************************************************************
 Online Resume 
-A Lightweight One page online Resume
+A Lightweight one page online Resume
 
 _______________________________________________________________
 
